--- a/style.css
+++ b/style.css
@@ -135,22 +135,27 @@ h1 {
 /* Mobile responsiveness */
 @media (max-width: 768px) {
     header {
-        flex-direction: column;
-        text-align: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
         padding: 10px;
     }
-
+    
     h1 {
         font-size: 1.3rem;
-        margin-left: 0;
-        text-align: right;
-        align-self: flex-end;
+        flex: 1 1 100%;
+        text-align: center;
+        margin-bottom: 10px;
     }
-
+    
     .profile {
-        align-items: flex-end;
-        margin: 10px 0;
+        order: -1;
+        align-items: flex-start;
+        flex: 1 1 auto;
+        margin: 0 10px;
     }
+    
 
     .profile img {
         width: 40px !important;
